--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,13 @@ mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
-#logging.level.com.nowcoder.community=debug
-#logging.file=d:/work/data/nowcoder/community.log
+logging.level.com.nowcoder.community=debug
+logging.file=/Users/xiaocheng/Documents/Repos/community/community.log
+
+# MailProperties
+spring.mail.host=smtp.126.com
+spring.mail.port=465
+spring.mail.username=dummy@126.com
+spring.mail.password=123123
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.ssl.enable=true
