register + login support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ spring.mail.username=dummy@126.com
 spring.mail.password=123123
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+# Community
+community.path.domain=http://localhost:8080
